<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/roster_menu_button"
            android:checked="true"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/roster" />
        <item
            android:id="@+id/favorites_menu_button"
            android:icon="@drawable/ic_image"
            android:title="@string/favorites" />
        <item
            android:id="@+id/show_menu_button"
            android:icon="@drawable/ic_place"
            android:title="@string/next_show" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/contacts_menu_button"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/contacts_menu_item" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>