<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_header"
    android:fillViewport="false"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/antonderyabin_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:clickable="true"
            android:contentDescription="@string/anton_deryabin_descr"
            android:cropToPadding="false"
            android:onClick="antonDeryabinButton"
            android:src="@drawable/deryabin" />

        <ImageButton
            android:id="@+id/loko_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_lokoButton"
            android:scaleType="fitCenter"
            android:src="@drawable/lokomotiv" />

        <ImageButton
            android:id="@+id/sergwhite_ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_sergwhiteButton"
            android:src="@drawable/white" />

        <ImageButton
            android:id="@+id/kremnev_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_kremnevButton"
            android:src="@drawable/krasavchik"
            android:layout_row="0"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/vulkan_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_vulkanButton"
            android:scaleType="fitCenter"
            android:src="@drawable/vulkan"
            android:layout_row="0"
            android:layout_column="2" />

        <ImageButton
            android:id="@+id/crimson_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_crimsonButton"
            android:scaleType="fitCenter"
            android:src="@drawable/krimson"
            android:layout_row="0"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/gromov_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_gromovButton"
            android:src="@drawable/gromov"
            android:layout_row="1"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/joker_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_jokerButton"
            android:scaleType="fitCenter"
            android:src="@drawable/joker"
            android:layout_row="1"
            android:layout_column="3" />

        <ImageButton
            android:id="@+id/schukin_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_schukinButton"
            android:scaleType="fitCenter"
            android:src="@drawable/schykin"
            android:layout_row="2"
            android:layout_column="1" />

        <ImageButton
            android:id="@+id/lapatka_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:contentDescription="@string/name_lapatkaButton"
            android:scaleType="fitCenter"
            android:src="@drawable/lapatka"
            android:layout_row="1"
            android:layout_column="2" />

    </GridLayout>

</android.support.v4.widget.NestedScrollView>
