<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_roster"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/roster"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show"
        android:enabled="true"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/next_show"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tickets"
        android:enabled="true"
        android:icon="@drawable/ic_products_white_24dp"
        android:title="@string/buytickets_toolbar_name"
        app:showAsAction="ifRoom" />
</menu>