<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fragment="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map"
        android:id="@+id/cardview_undermap"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="10dp"
        android:layout_margin="5dp"
        fragment:targetApi="lollipop"
        android:onClick="onClickCardView">

        <TextView
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:alpha="@integer/cast_libraries_material_featurehighlight_pulse_base_alpha"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/main_site"
            android:textSize="16sp">
        </TextView>

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:alpha="@integer/cast_libraries_material_featurehighlight_pulse_base_alpha"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/drawer_header_text"
            android:id="@+id/textView2">
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="103dp"
            android:layout_margin="5dp"
            android:src= "@drawable/logo_iwf"
            android:id="@+id/imageView" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardElevation="10dp"
        card_view:cardCornerRadius="10dp"
        android:layout_below="@+id/cardview_undermap"
        android:layout_alignLeft="@+id/cardview_undermap"
        android:layout_alignStart="@+id/cardview_undermap">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_line"
            android:id="@+id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts_txt"
            android:layout_gravity="center|bottom"/>

    </android.support.v7.widget.CardView>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        fragment:fragmentCornerRadius="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/cardview_undermap"
        android:layout_alignStart="@+id/cardview_undermap" />

</RelativeLayout>